--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
   <div class="floating-btns">
     <a href="https://t.me/FALAHXCommunity" target="_blank">Telegram</a>
-    <a href="https://x.com/FALAHX" target="_blank">X (Twitter)</a>
+    <a href="https://x.com/FALAHXofficial" target="_blank">X (Twitter)</a>
   </div>
 
   <script>
