--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   </footer>
 
   <div class="floating-btns">
-    <a href="https://t.me/FALAHXCommunity" target="_blank">Telegram</a>
+    <a href="https://t.me/FALAHXOFFICIAL" target="_blank">Telegram</a>
     <a href="https://x.com/FALAHXofficial" target="_blank">X (Twitter)</a>
   </div>
 
